add new realises

--- a/Emsemble_pipline_models.ipynb
+++ b/Emsemble_pipline_models.ipynb
@@ -27,25 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "42983589",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Imports concluídos.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
+    "from modules.metrics import generate_ma_metrics_from_tables, generate_sa_metrics_from_tables\n",
+    "from modules.utils import log, discover_models_and_paths\n",
+    "from modules.utils import resolve_paths_outputs\n",
     "import modules.flags as flags\n",
-    "from modules.runner_sa import run_sa_pipeline\n",
-    "from main import discover_model_csvs, resolve_paths_outputs, run_between_models\n",
-    "from modules.utils import log\n",
-    "print('[INFO] Imports concluídos.')\n"
+    "import os, json\n"
    ]
   },
   {
@@ -53,24 +44,19 @@
    "execution_count": 2,
    "id": "85512b28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[INFO] Flags definidas: ['patient'] ['soft_voting'] macro_micro\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Configure as flags de execução\n",
-    "flags.GENERATE_LEVELS = ['patient']           # opções: ['tile','image','patient']\n",
-    "flags.GENERATE_PLOTS_FOR = ['soft_voting']    # opções: ['hard_voting','soft_voting','weighted']\n",
-    "flags.ROC_DETAIL = 'macro_micro'              # opções: 'per_class' ou 'macro_micro'\n",
-    "flags.MAX_WORKERS = 4                         # paralelização por modelo\n",
-    "flags.USE_THREADS = True                      # recomendado no Windows\n",
     "\n",
-    "print('[INFO] Flags definidas:', flags.GENERATE_LEVELS, flags.GENERATE_PLOTS_FOR, flags.ROC_DETAIL)\n"
+    "# Configurar flags (plots opcionais para soft_voting)\n",
+    "flags.GENERATE_LEVELS = ['tile', 'image', 'patient']\n",
+    "if 'soft_voting' not in flags.GENERATE_PLOTS_FOR:\n",
+    "    flags.GENERATE_PLOTS_FOR.append('soft_voting')\n",
+    "\n",
+    "MODELS = ['EFFNet', 'GGNet', 'MOBNet']\n",
+    "ENSEMBLE_TYPE = 'soft_voting'  # 'hard_voting' | 'soft_voting' | 'weighted'\n",
+    "WEIGHT_METRIC = 'f1_macro'     # usado apenas com 'weighted'\n",
+    "TABLES_DIR, _ = resolve_paths_outputs()\n",
+    "OUTPUT_FILENAME = \"tasks.json\"\n"
    ]
   },
   {
@@ -84,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "e98f7bc4",
    "metadata": {},
    "outputs": [
@@ -92,42 +78,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- Iniciando Preparação de Tarefas ---\n",
+      "[INFO] Buscando modelos especificados: ['EFFNet', 'GGNet', 'MOBNet']\n",
+      "\n",
+      "--- Relatório de Descoberta ---\n",
       "EFFNet: 10 CSVs encontrados\n",
-      "Exemplo: 0903-102424_EFF-NET_fold0_results.csv\n",
       "------------------------------------------------------------\n",
       "GGNet: 10 CSVs encontrados\n",
-      "Exemplo: 0710-161214_GoogleNet_fold0_results.csv\n",
       "------------------------------------------------------------\n",
       "MOBNet: 10 CSVs encontrados\n",
-      "Exemplo: 0707-213643_MobileNetV2_fold0_results.csv\n",
       "------------------------------------------------------------\n",
-      "[INFO] Modelos configurados: ['EFFNet', 'GGNet', 'MOBNet']\n"
+      "[INFO] Modelos configurados para execução: ['EFFNet', 'GGNet', 'MOBNet']\n",
+      "\n",
+      "[SUCESSO] Arquivo 'tasks.json' gerado com 3 tarefas.\n",
+      "Agora você pode mover este arquivo e rodar o script 'execute_tasks.py'.\n"
      ]
     }
    ],
    "source": [
-    "# Descobrir CSVs por modelo e montar configuração do SA\n",
-    "MODELS = ['EFFNet', 'GGNet', 'MOBNet']  # ajuste conforme necessário\n",
-    "tables_dir, _ = resolve_paths_outputs()\n",
-    "models_cfgs = []\n",
     "\n",
-    "for m in MODELS:\n",
-    "    csvs = discover_model_csvs(m)\n",
-    "    print(f'{m}: {len(csvs)} CSVs encontrados')\n",
-    "    if csvs:\n",
-    "        print('Exemplo:', os.path.basename(csvs[0]))\n",
-    "    else:\n",
-    "        print('Aviso: nenhum CSV encontrado para', m)\n",
-    "    print('-'*60)\n",
+    "print(f\"--- Iniciando Preparação de Tarefas ---\")\n",
+    "\n",
+    "try:\n",
+    "    # 2. DESCUBRA OS MODELOS E SEUS CAMINHOS\n",
+    "    models_and_paths = discover_models_and_paths(models_to_find=MODELS)\n",
+    "\n",
+    "    if not models_and_paths:\n",
+    "        print(\"[INFO] Nenhum modelo válido foi encontrado. Nenhum arquivo de tarefas gerado.\")\n",
+    "        exit()\n",
+    "\n",
+    "    # 3. PREPARE A LISTA DE CONFIGURAÇÕES (O CONTEÚDO DO FUTURO JSON)\n",
+    "    configs_to_save = []\n",
+    "    for model_name, csv_path_list in models_and_paths.items():\n",
+    "        if not csv_path_list:\n",
+    "            print(f\"[AVISO] Modelo '{model_name}' não possui CSVs e será ignorado.\")\n",
+    "            continue\n",
+    "\n",
+    "        config = {\n",
+    "            'model_name': model_name,\n",
+    "            'ensemble_type': ENSEMBLE_TYPE,\n",
+    "            'weight_metric': WEIGHT_METRIC,\n",
+    "            'csv_paths': csv_path_list,\n",
+    "        }\n",
+    "        configs_to_save.append(config)\n",
     "    \n",
-    "    models_cfgs.append({\n",
-    "        'model_name': m,\n",
-    "        'ensemble_type': 'soft_voting',    # ou 'hard_voting'/'weighted'\n",
-    "        'csv_paths': csvs,\n",
-    "        'save_output_base': os.path.join(tables_dir, m),\n",
-    "    })\n",
+    "    # 4. SALVE AS CONFIGURAÇÕES EM UM ARQUIVO JSON\n",
+    "    with open(OUTPUT_FILENAME, 'w', encoding='utf-8') as f:\n",
+    "        json.dump(configs_to_save, f, indent=4)\n",
     "\n",
-    "print(f'[INFO] Modelos configurados: {[cfg['model_name'] for cfg in models_cfgs]}')\n"
+    "    print(f\"\\n[SUCESSO] Arquivo '{OUTPUT_FILENAME}' gerado com {len(configs_to_save)} tarefas.\")\n",
+    "    print(\"Agora você pode mover este arquivo e rodar o script 'execute_tasks.py'.\")\n",
+    "\n",
+    "except FileNotFoundError as e:\n",
+    "    print(f\"\\n[ERRO CRÍTICO] {e}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"\\n[ERRO INESPERADO] Ocorreu um erro durante a preparação: {e}\")\n"
    ]
   },
   {
@@ -143,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "632a579d",
    "metadata": {},
    "outputs": [
@@ -151,37 +156,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[16:05:51] [SA] Iniciando execução com paralelização e cache interno (tile → image → patient)...\n"
+      "[13:53:05] [SA] Iniciando execução com paralelização e cache interno (tile → image → patient)...\n",
+      "[13:53:05] [SA] Iniciando execução do pipeline SA para 3 modelos (tile → image → patient)...\n",
+      "[13:53:05] [INICIANDO] Processamento do modelo: EFFNet\n",
+      "[13:53:05] [INICIANDO] Processamento do modelo: GGNet\n",
+      "[13:53:05] [SA] EFFNet → tile\n",
+      "[13:53:05] [INICIANDO] Processamento do modelo: MOBNet\n",
+      "[13:53:05] [SA] GGNet → tile\n",
+      "[13:53:05] [SA] MOBNet → tile\n",
+      "[14:02:09] [SA] EFFNet → image\n",
+      "[14:02:19] [SA] MOBNet → image\n",
+      "[14:02:32] [SA] GGNet → image\n",
+      "[14:04:19] [SA] EFFNet → patient\n",
+      "[14:04:36] [SA] MOBNet → patient\n",
+      "[14:04:52] [SA] GGNet → patient\n",
+      "[14:06:28] [AVISO] Falha ao exportar SA para EFFNet: name 'export_sa_to_results' is not defined\n",
+      "[14:06:28] [CONCLUÍDO] Processamento do modelo: EFFNet\n",
+      "[14:06:41] [AVISO] Falha ao exportar SA para MOBNet: name 'export_sa_to_results' is not defined\n",
+      "[14:06:41] [CONCLUÍDO] Processamento do modelo: MOBNet\n",
+      "[14:06:50] [AVISO] Falha ao exportar SA para GGNet: name 'export_sa_to_results' is not defined\n",
+      "[14:06:50] [CONCLUÍDO] Processamento do modelo: GGNet\n",
+      "[14:06:50] \n",
+      "--- Pipeline SA Finalizado ---\n",
+      "[14:06:50] Resultados das execuções:\n",
+      "[14:06:50]  - EFFNet: Concluído\n",
+      "[14:06:50]  - GGNet: Concluído\n",
+      "[14:06:50]  - MOBNet: Concluído\n"
      ]
     }
    ],
    "source": [
+    "from modules.runner_sa import run_sa_for_models_parallel\n",
     "# Execução do pipeline SA\n",
-    "# -----------------------------------------\n",
-    "log(\"[SA] Iniciando execução com paralelização e cache interno (tile → image → patient)...\")\n",
-    "results = run_sa_pipeline(models_cfgs)\n",
     "\n",
-    "# -----------------------------------------\n",
+    "INPUT_FILENAME = \"tasks.json\"\n",
+    "if not os.path.exists(INPUT_FILENAME):\n",
+    "    raise FileNotFoundError(f\"Arquivo de plano de execução '{INPUT_FILENAME}' não encontrado!\")\n",
+    "\n",
+    "with open(INPUT_FILENAME, 'r', encoding='utf-8') as f:\n",
+    "    lista_de_configs = json.load(f)\n",
+    "\n",
+    "log(\"[SA] Iniciando execução com paralelização e cache interno (tile → image → patient)...\")\n",
     "# Sumário dos artefatos gerados\n",
     "# -----------------------------------------\n",
-    "log(\"[SA] Sumário dos resultados gerados:\")\n",
-    "\n",
-    "for cfg, res in zip(models_cfgs, results):\n",
-    "    model_name = cfg.get('model_name', 'modelo_desconhecido')\n",
-    "    log(f\"── Modelo: {model_name}\")\n",
-    "\n",
-    "    if isinstance(res, dict):\n",
-    "        for lvl in ['tile', 'image', 'patient']:\n",
-    "            if lvl in res:\n",
-    "                csv_path = res[lvl].get('csv', '—')\n",
-    "                out_dir = res[lvl].get('out_dir', '—')\n",
-    "                log(f\"    • Nível: {lvl.capitalize()} | CSV: {csv_path} | out_dir: {out_dir}\")\n",
-    "            else:\n",
-    "                log(f\"    • Nível: {lvl.capitalize()} | [não gerado]\")\n",
-    "    else:\n",
-    "        log(f\"    ⚠ Erro: {res}\")\n",
-    "\n",
-    "log(\"[✔] SA finalizado com sucesso.\")\n"
+    "run_sa_for_models_parallel(TABLES_DIR, lista_de_configs, max_workers=4, use_threads=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f73bca6",
+   "metadata": {},
+   "source": [
+    "#### **[SA]  Gerar Métricas**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a656ad0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generate_sa_metrics_from_tables()"
    ]
   },
   {
@@ -197,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cd3b202b",
    "metadata": {},
    "outputs": [
@@ -205,39 +241,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "[MA] Rodando ensemble entre modelos: soft_voting ...\n",
-      "\n",
-      "[Image Level] Running ensemble between models: soft_voting ...\n",
-      "Saved: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\ImageLevel_Ensemble_Models_soft_voting\\ensemble_between_models_per_image_soft_voting.csv\n",
-      "Metrics: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\ImageLevel_Ensemble_Models_soft_voting\\metrics_image_level_soft_voting.json\n",
-      "\n",
-      "[Tile Level] Running ensemble between models: soft_voting ...\n",
-      "Saved: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\TileLevel_Ensemble_Models_soft_voting\\ensemble_between_models_tile_level_soft_voting.csv\n",
-      "Metrics: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\TileLevel_Ensemble_Models_soft_voting\\metrics_tile_level_soft_voting.json\n",
-      "\n",
-      "[Patient Level] Running ensemble between models: soft_voting ...\n",
-      "Saved: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\PatientLevel_Ensemble_soft_voting\\ensemble_between_models_per_patient_soft_voting.csv\n",
-      "Metrics: c:\\Users\\rodri\\OneDrive - UFPE\\Área de Trabalho\\meu cod\\outputs\\tables\\Ensemble_Between_Models\\PatientLevel_Ensemble_soft_voting\\global_metrics_patient_level_soft_voting.json\n",
-      "[✔] MA finalizado.\n"
+      "[14:06:50] \n",
+      "[MA] Rodando ensemble entre modelos para os tipos: soft_voting ...\n",
+      "[14:06:50] [MA] Iniciando pipeline de Ensemble Entre Modelos para: ['EFFNet', 'GGNet', 'MOBNet']\n",
+      "[14:06:50] [MA] Tipo de Ensemble a ser executado: 'soft_voting'\n",
+      "[14:06:50] [MA] Resultados serão salvos em: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\n",
+      "[14:06:50] [MA INICIANDO] Executando ensemble 'soft_voting' para o nível 'tile'...\n",
+      "[14:06:50] [MA INICIANDO] Executando ensemble 'soft_voting' para o nível 'image'...\n",
+      "[14:06:50] [MA INICIANDO] Executando ensemble 'soft_voting' para o nível 'patient'...\n",
+      "[14:06:50] [MA SUCESSO] Nível 'image' (soft_voting) concluído. CSV salvo em: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\ImageLevel_Ensemble_Models_soft_voting\\ensemble_between_models_per_image_soft_voting.csv\n",
+      "[14:06:50] [MA SUCESSO] Nível 'patient' (soft_voting) concluído. CSV salvo em: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\PatientLevel_Ensemble_soft_voting\\ensemble_between_models_per_patient_soft_voting.csv\n",
+      "[14:07:45] [MA SUCESSO] Nível 'tile' (soft_voting) concluído. CSV salvo em: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\TileLevel_Ensemble_Models_soft_voting\\ensemble_between_models_tile_level_soft_voting.csv\n",
+      "[14:07:45] \n",
+      "--- Pipeline MA (Ensemble Entre Modelos) Finalizado ---\n",
+      "[14:07:45] Resultados das execuções:\n",
+      "[14:07:45]  - Nível: tile     | Status: Sucesso | Detalhe: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\TileLevel_Ensemble_Models_soft_voting\\metrics_tile_level_soft_voting.json\n",
+      "[14:07:45]  - Nível: image    | Status: Sucesso | Detalhe: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\ImageLevel_Ensemble_Models_soft_voting\\metrics_image_level_soft_voting.json\n",
+      "[14:07:45]  - Nível: patient  | Status: Sucesso | Detalhe: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\tables\\Ensemble_Between_Models\\PatientLevel_Ensemble_soft_voting\\global_metrics_patient_level_soft_voting.json\n"
      ]
     }
    ],
    "source": [
-    "# Executar ensemble entre modelos (MA) reaproveitando SA pronto\n",
-    "# Ajuste ensemble_type e weight_metric conforme necessário\n",
-    "ensemble_type = 'soft_voting'\n",
-    "weight_metric = 'f1_macro'\n",
+    "import os\n",
+    "from modules.runner_ma import run_ma_for_models_parallel\n",
+    "from modules.utils import log \n",
     "\n",
-    "print(f'\\n[MA] Rodando ensemble entre modelos: {ensemble_type} ...')\n",
-    "run_between_models(MODELS, ensemble_type, weight_metric)\n",
-    "print('[✔] MA finalizado.')\n"
+    "\n",
+    "# =======================================================================\n",
+    "# 2. EXECUTE O PIPELINE\n",
+    "# =======================================================================\n",
+    "\n",
+    "log(f'\\n[MA] Rodando ensemble entre modelos para os tipos: {ENSEMBLE_TYPE} ...')\n",
+    "\n",
+    "run_ma_for_models_parallel(\n",
+    "    tables_dir=TABLES_DIR,\n",
+    "    models_to_include=MODELS,\n",
+    "    ensemble_type=ENSEMBLE_TYPE, \n",
+    "    weight_metric=WEIGHT_METRIC\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdaf3633",
+   "metadata": {},
+   "source": [
+    "#### **[MA]  Gerar Métricas**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e8a45827",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[14:37:58] [METRICS] Salvo: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\results\\MA\\tile\\metrics_tile_level_soft_voting.json\n",
+      "[14:38:03] [METRICS] Salvo: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\results\\MA\\image\\metrics_image_level_soft_voting.json\n",
+      "[14:38:04] [METRICS] Salvo: c:\\Users\\Fernando Alves\\Desktop\\Nova pasta\\ensamble_pipeline_MA_SA_models\\outputs\\results\\MA\\patient\\metrics_patient_level_soft_voting.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "generate_ma_metrics_from_tables()\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gsubma",
+   "display_name": "redes",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
